--- a/templates/partner.html
+++ b/templates/partner.html
@@ -55,7 +55,9 @@
                     <h2>Welcome to Your Partner Dashboard</h2>
                     <p>This dashboard is designed for partners to manage merchant integrations with clubmadeira.io. Use the "My Account" section to update your contact details or change your password. If you have admin privileges, you can return to the admin panel using the "Back to Admin" button.</p>
                 </div>
-                {% include 'my_account.html' with user_type='partner' %}
+                {% with user_type='partner' %}
+                    {% include 'my_account.html' %}
+                {% endwith %}
                 <div id="my-products" class="section">
                     <h2>My Products</h2>
                     <p>These are the products from your parts feed.</p>
