--- a/templates/merchant.html
+++ b/templates/merchant.html
@@ -17,12 +17,12 @@
 </head>
 <body>
     <div class="layout-wrapper">
-        <div class="header">
+        <div class="header" style="margin-bottom: 0; padding-bottom: 0;">
             <div class="header-content" id="brandingContent">
                 <!-- Branding content will be loaded here -->
             </div>
         </div>
-        <div class="main-container">
+        <div class="main-container" style="margin-top: 0; padding-top: 0;">
             <div class="menu-container">
                 <div class="menu">
                     <button data-section="my-products">
@@ -30,9 +30,6 @@
                     </button>
                     <button data-section="my-store">
                         <span class="button-content"><i class="fas fa-store"></i> My Store</span>
-                    </button>
-                    <button data-section="wix-keys">
-                        <span class="button-content"><i class="fab fa-wix-simple"></i> Wix Keys</span>
                     </button>
                     <button data-section="my-account">
                         <span class="button-content"><i class="fas fa-cog"></i> My Account</span>
@@ -45,7 +42,7 @@
                     </button>
                 </div>
             </div>
-            <div class="content-wrapper">
+            <div class="content-wrapper" style="margin-top: 0;">
                 <div id="welcome" class="section">
                     <h2>Welcome to Your Merchant Dashboard</h2>
                     <p>This dashboard allows you to link the parts on your Wix site to a network of community groups, who show relevant discounted products on their websites from clubmadeira.io.</p>
@@ -67,28 +64,13 @@
                         <tbody id="productList"></tbody>
                     </table>
                 </div>
-                <div id="wix-keys" class="section" style="padding-left: 200px;">
-                    <div style="display: flex; align-items: center; margin-bottom: 10px;">
-                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512" style="height: 32px; width: auto; margin-right: 10px;">
-                            <!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.-->
-                            <path d="M393.4 131.7c0 13 2.1 32.7-28.7 43.8-9.5 3.5-16 9.7-16 9.7 0-31 4.7-42.2 17.4-48.9 9.8-5.1 27.2-4.6 27.2-4.6zm-115.8 35.5l-34.2 132.7-28.5-108.6c-7.7-32-20.8-48.5-48.4-48.5-27.4 0-40.7 16.2-48.4 48.5L89.5 299.9 55.3 167.2C49.7 140.5 23.9 129 0 132l65.6 247.9s21.6 1.6 32.5-4c14.2-7.3 21-12.8 29.6-46.6 7.7-30.1 29.1-118.4 31.1-124.7 4.8-14.9 11.1-13.8 15.4 0 2 6.3 23.5 94.6 31.1 124.7 8.6 33.7 15.4 39.3 29.6 46.6 10.8 5.5 32.5 4 32.5 4l65.6-247.9c-24.4-3.1-49.8 8.9-55.3 35.3zm115.8 5.2s-4.1 6.3-13.5 11.6c-6 3.4-11.8 5.6-18 8.6-15.1 7.3-13.2 14-13.2 35.2v152.1s16.6 2.1 27.4-3.4c13.9-7.1 17.1-14 17.3-44.8V181.4l0 0v-9zm163.4 84.1L640 132.8s-35.1-6-52.5 9.9c-13.3 12.1-24.4 29.6-54.2 72.5-.5 .7-6.3 10.5-13.1 0-29.3-42.2-40.8-60.3-54.2-72.5-17.4-15.8-52.5-9.9-52.5-9.9l83.2 123.7-83 123.4s36.6 4.6 54-11.2c11.5-10.5 17.6-20.4 52.5-70.7 6.8-10.5 12.6-.8 13.1 0 29.4 42.4 39.2 58.1 53.1 70.7 17.4 15.8 53.3 11.2 53.3 11.2L556.8 256.5z"/>
-                        </svg>
-                        <h2>Wix Keys</h2>
-                    </div>
-                    <p>Your Wix Client ID is used to integrate your merchant account with Wix services. Ensure it matches the key provided in your Wix developer dashboard.</p>
-                    <div class="settings-form">
-                        <label for="wixClientId">Wix Client ID:</label>
-                        <input type="text" id="wixClientId" placeholder="Enter Wix Client ID">
-                        <button data-action="saveWixClientId"><i class="fas fa-save"></i> Save Wix Client ID</button>
-                    </div>
-                </div>
-                <div id="my-store" class="section" style="padding-left: 200px;">
+                <div id="my-store" class="section" style="margin-left: 210px; margin-right: 10px; width: calc(100% - 220px);">
                     <div style="display: flex; align-items: center; margin-bottom: 10px;">
                         <i class="fas fa-store" style="font-size: 32px; margin-right: 10px;"></i>
                         <h2>My Store</h2>
                     </div>
                     <p>Request a custom Wix store to sell your products online. Provide details below to set up your store (minimum: Home and Returns Policy pages).</p>
-                    <form id="storeRequestForm" class="settings-form">
+                    <form id="storeRequestForm" class="settings-form" style="width: 100%;">
                         <label for="storeName">Store Name:</label>
                         <input type="text" id="storeName" name="storeName" placeholder="Enter your store name" required>
 
